2000-07-01  Jeffrey Stedfast  <fejj@helixcode.com>

	* camel-folder.c: Renamed _by_uid methods. Since we no longer
	have get-by-number methods, no need to have the _by_uid 
	extensions. 
	(get_message_by_uid): Renamed to get_message
	(delete_message_by_uid): Renamed to delete_message
	(summary_get_by_uid): Renamed to get_message_info

	* providers/mbox/camel-mbox-folder.c: 
	* providers/pop3/camel-pop3-folder.c:
	* providers/imap/camel-imap-folder.c:
	* providers/vee/camel-vee-folder.c: Updated to reflect
	camel-folder changes.

2000-06-30  Jeffrey Stedfast  <fejj@helixcode.com>

	* camel-folder.c (camel_folder_copy_message_to): New function, to
	copy a message from one folder to another. The default
	implementation just uses append_message, but providers can 
	implement more efficient versions for use when both folders are on 
	the same store.

	* broken-date-parser.[c,h]: Utilities for parsing broken
	date strings.
	
	* providers/imap/camel-imap-folder.c (imap_move_message_to): 
	(imap_copy_message_to): Implemented.

	* camel-mime-utils.c (header_decode_date): Wrote some code to try
	and un-mangle broken date formats and then parse that new string 
	instead.

2000-06-30  Dan Winship  <danw@helixcode.com>

	* camel-folder.c (camel_folder_move_message_to): New function, to
	move a message from one folder to another. The default
	implementation just uses append_message and delete_message, but
	providers can implement more efficient versions for use when both
	folders are on the same store.

2000-06-29  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c (imap_expunge): Should now
	print a meaningful error message when it doesn't succeed

2000-06-28  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-store.c (imap_connect): Changed to
	keep prompting user for a valid password until it either
	authenticates or until Canceled by the user.
	(camel_imap_command_extended): Improved speed (replaced the